--- a/exercicio-timer/index.html
+++ b/exercicio-timer/index.html
@@ -14,14 +14,12 @@
   <section class="container">
     <h1>Meu Timer:</h1>
     <div>
-      <span id="hour"></span>
-      <span id="minute"></span>
-      <span id="second"></span>
+      <p class="clock">00:00:00</p>
     </div>
     <div>
-      <button id="start">Start</button>
-      <button id="pause">Pause</button>
-      <button id="restart">Restart</button>
+      <button class="start">Start</button>
+      <button class="stop">Stop</button>
+      <button class="reset">Reset</button>
     </div>
 
   </section>
