--- a/Criando-uma-Lista-de-tarefas/index.html
+++ b/Criando-uma-Lista-de-tarefas/index.html
@@ -14,16 +14,11 @@
   <section class="container">
 
     <h1>Task List</h1>
-    <p>
-      <input class="input-task" type="text">
-      <button class="createTask">Add Task</button>
-    </p>
 
-    <!-- <div class="task-container">
-      <p>Tarefa Qualquer</p>
-      <p class="deleteTask">x</p>
-    </div> -->
+    <input class="input-task" type="text">
+    <button class="createTask">Add Task</button>
 
+    <div class="taskElement"></div>
   </section>
 
   <script src="./assets/js/main.js"></script>
