correção de bugs

--- a/Criando-uma-Lista-de-tarefas/index.html
+++ b/Criando-uma-Lista-de-tarefas/index.html
@@ -19,6 +19,8 @@
     <button class="createTask">Add Task</button>
 
     <div class="taskElement"></div>
+
+    <button class="clear">Clear</button>
   </section>
 
   <script src="./assets/js/main.js"></script>
