--- a/exercicio-funções/index.html
+++ b/exercicio-funções/index.html
@@ -20,26 +20,26 @@
 
       <div class="characters">
 
-        <div class="character">&#67;</div>
-        <div class="character">&#40;</div>
-        <div class="character">&#41;</div>
-        <div class="character">&#47;</div>
-        <div class="character">7</div>
-        <div class="character">8</div>
-        <div class="character">9</div>
-        <div class="character">&#42;</div>
-        <div class="character">4</div>
-        <div class="character">5</div>
-        <div class="character">6</div>
-        <div class="character">&#43;</div>
-        <div class="character">1</div>
-        <div class="character">2</div>
-        <div class="character">3</div>
-        <div class="character">&#151;</div>
-        <div class="character">&#183;</div>
-        <div class="character">0</div>
-        <div class="character">&#139;&#139;</div>
-        <div class="character">&#61;</div>
+        <div data-character="C" class="character">&#67</div>
+        <div data-character="&#40" class="character">&#40</div>
+        <div data-character="&#41" class="character">&#41</div>
+        <div data-character="&#47" class="character">&#47</div>
+        <div data-character="7" class="character">7</div>
+        <div data-character="8" class="character">8</div>
+        <div data-character="9" class="character">9</div>
+        <div data-character="&#42" class="character">&#42</div>
+        <div data-character="4" class="character">4</div>
+        <div data-character="5" class="character">5</div>
+        <div data-character="6" class="character">6</div>
+        <div data-character="&#43" class="character">&#43</div>
+        <div data-character="1" class="character">1</div>
+        <div data-character="2" class="character">2</div>
+        <div data-character="3" class="character">3</div>
+        <div data-character="&#151" class="character">&#151</div>
+        <div data-character="&#183" class="character">&#183</div>
+        <div data-character="0" class="character">0</div>
+        <div data-character="&#139&#139" class="character">&#139&#139</div>
+        <div data-character="&#61" class="character">&#61</div>
       </div>
     </div>
 
