--- a/exercicio-funções/index.html
+++ b/exercicio-funções/index.html
@@ -16,7 +16,7 @@
 
       <h1>CALCULADORA JS</h1>
 
-      <input type="text" name="" id="">
+      <input type="text" class="display">
 
       <div class="characters">
 
@@ -45,7 +45,7 @@
 
   </section>
 
-  <script src="./assets/js/main.js"></script>
+  <script src="./assets/js/app.js"></script>
 </body>
 
 </html>
