--- a/exercicio-funções/index.html
+++ b/exercicio-funções/index.html
@@ -16,30 +16,30 @@
 
       <h1>CALCULADORA JS</h1>
 
-      <input type="text" class="display">
+      <input type="text" class="display" disabled>
 
       <div class="characters">
 
-        <div data-character="C" class="character">&#67</div>
-        <div data-character="&#40" class="character">&#40</div>
-        <div data-character="&#41" class="character">&#41</div>
-        <div data-character="&#47" class="character">&#47</div>
-        <div data-character="7" class="character">7</div>
-        <div data-character="8" class="character">8</div>
-        <div data-character="9" class="character">9</div>
-        <div data-character="&#42" class="character">&#42</div>
-        <div data-character="4" class="character">4</div>
-        <div data-character="5" class="character">5</div>
-        <div data-character="6" class="character">6</div>
-        <div data-character="&#43" class="character">&#43</div>
-        <div data-character="1" class="character">1</div>
-        <div data-character="2" class="character">2</div>
-        <div data-character="3" class="character">3</div>
-        <div data-character="&#151" class="character">&#151</div>
-        <div data-character="&#183" class="character">&#183</div>
-        <div data-character="0" class="character">0</div>
-        <div data-character="&#139&#139" class="character">&#139&#139</div>
-        <div data-character="&#61" class="character">&#61</div>
+        <div id="buttonClear" class="character operators">&#67</div>
+        <div data-character="&#40" class="character operators">&#40</div>
+        <div data-character="&#41" class="character operators">&#41</div>
+        <div data-character="&#47" class="character operators">&#47</div>
+        <div data-character="7" class="character numbers">7</div>
+        <div data-character="8" class="character numbers">8</div>
+        <div data-character="9" class="character numbers">9</div>
+        <div data-character="&#42" class="character operators">&#42</div>
+        <div data-character="4" class="character numbers">4</div>
+        <div data-character="5" class="character numbers">5</div>
+        <div data-character="6" class="character numbers">6</div>
+        <div data-character="&#43" class="character operators">&#43</div>
+        <div data-character="1" class="character numbers">1</div>
+        <div data-character="2" class="character numbers">2</div>
+        <div data-character="3" class="character numbers">3</div>
+        <div data-character="&#151" class="character operators">-</div>
+        <div data-character="&#183" class="character operators">&#183</div>
+        <div data-character="0" class="character numbers">0</div>
+        <div id="deleteOneValue" class="character operators">&#139&#139</div>
+        <div id="buttonShowResult" class="character operators">&#61</div>
       </div>
     </div>
 
