--- a/exercicio-funções/index.html
+++ b/exercicio-funções/index.html
@@ -16,13 +16,13 @@
 
       <h1>CALCULADORA JS</h1>
 
-      <input type="text" class="display" disabled>
+      <input type="text" class="display">
 
       <div class="characters">
 
         <div id="buttonClear" class="character operators">&#67</div>
-        <div data-character="&#40" class="character operators">&#40</div>
-        <div data-character="&#41" class="character operators">&#41</div>
+        <div data-character="(" class="character operators">&#40</div>
+        <div data-character=")" class="character operators">&#41</div>
         <div data-character="&#47" class="character operators">&#47</div>
         <div data-character="7" class="character numbers">7</div>
         <div data-character="8" class="character numbers">8</div>
