--- a/objetos-avançado/htmlPreview.html
+++ b/objetos-avançado/htmlPreview.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <script src="./aula05.js"></script>
+    <!-- Olhar no console -->
+    <script src=""></script>
 </body>
 
 </html>
