--- a/classesJS/htmlPreview.html
+++ b/classesJS/htmlPreview.html
@@ -10,7 +10,7 @@
 
 <body>
     <!-- Olhar no console -->
-    <script src="./aula01.js"></script>
+    <script src=""></script>
 </body>
 
 </html>
