--- a/exercicio-classes/index.html
+++ b/exercicio-classes/index.html
@@ -15,20 +15,20 @@
     <h1>Formulário</h1>
     <form action="">
 
-      <label for="input-teste-1">Nome:</label>
-      <input type="text" id="input-teste-1">
+      <label for="input-teste-1">Nome</label>
+      <input type="text" id="input-teste-1" class="validate">
 
-      <label for="input-teste-2">Email:</label>
-      <input type="email" id="input-teste-2">
+      <label for="input-teste-2">Email</label>
+      <input type="email" id="input-teste-2" class="validate">
 
-      <label for="input-teste-3">CPF:</label>
-      <input type="number" id="input-teste-3">
+      <label for="input-teste-3">CPF</label>
+      <input type="number" id="input-teste-3" class="validate">
 
-      <label for="input-teste-4">Senha:</label>
-      <input type="text" id="input-teste-4">
+      <label for="input-teste-4">Senha</label>
+      <input type="password" id="input-teste-4" class="validate">
 
-      <label for="input-teste-5">Repetir Senha:</label>
-      <input type="text" id="input-teste-5">
+      <label for="input-teste-5">Repetir Senha</label>
+      <input type="password" id="input-teste-5" class="validate">
 
       <button>Enviar</button>
 
@@ -36,6 +36,7 @@
 
   </section>
 
+  <script src="./assets/js/valid-cpf.js"></script>
   <script src="./assets/js/main.js"></script>
 </body>
 
