--- a/exercicio-classes/index.html
+++ b/exercicio-classes/index.html
@@ -18,17 +18,20 @@
       <label for="input-teste-1">Nome</label>
       <input type="text" id="input-teste-1" class="validate">
 
-      <label for="input-teste-2">Email</label>
-      <input type="email" id="input-teste-2" class="validate">
+      <label for="input-teste-2">Sobrenome</label>
+      <input type="text" id="input-teste-2" class="validate">
 
       <label for="input-teste-3">CPF</label>
-      <input type="number" id="input-teste-3" class="validate">
+      <input type="text" id="input-teste-3" class="validate cpf">
 
-      <label for="input-teste-4">Senha</label>
-      <input type="password" id="input-teste-4" class="validate">
+      <label for="input-teste-4">Usuário</label>
+      <input type="text" id="input-teste-4" class="validate user">
 
-      <label for="input-teste-5">Repetir Senha</label>
-      <input type="password" id="input-teste-5" class="validate">
+      <label for="input-teste-5">Senha</label>
+      <input type="password" id="input-teste-5" class="validate password">
+
+      <label for="input-teste-6">Repetir Senha</label>
+      <input type="password" id="input-teste-6" class="validate repeat-password">
 
       <button>Enviar</button>
 
