--- a/javascript-assincrono/javascript-ajax/index.html
+++ b/javascript-assincrono/javascript-ajax/index.html
@@ -21,7 +21,7 @@
 
   </section>
 
-  <script src="./assets/js/main.js"></script>
+  <script src="./assets/js/ajax.js"></script>
 </body>
 
 </html>
