--- a/javascript-assincrono/javascript-fetch -axios/index.html
+++ b/javascript-assincrono/javascript-fetch -axios/index.html
@@ -18,7 +18,7 @@
   </section>
 
   <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
-  <script src="./assets/js/main.js"></script>
+  <script src="./assets/js/axios.js"></script>
 </body>
 
 </html>
